--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,12 @@ name = "cookiebot"
 version = "0.1.3"
 authors = ["Chronophylos <nikolai@chronophylos.com>"]
 edition = "2018"
+repository = "Chronphylos/cookiebot"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[features]
+default = []
+shop = []
 
 [dependencies]
 lazy_static = "1.4.0"
@@ -12,8 +16,10 @@ regex = "1.3.9"
 ron = "0.6.2"
 serde = { version = "1.0.116", features = ["derive"] }
 anyhow = "1.0.32"
-twitchchat = { version = "0.14.1", features = ["async", "smol", "async-tls"] }
+twitchchat = { version = "=0.14.1", features = ["async", "smol", "async-tls"] }
 smol = "1.2.2"
 log = "0.4.11"
 env_logger = "0.7.1"
 either = "1.6.1"
+reqwest = { version = "0.10.8", default-features = false, features = ["json", "rustls-tls"] }
+tokio = { version = "0.2.22", features = ["macros"] }
