--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ regex = "1.3.9"
 ron = "0.6.2"
 serde = { version = "1.0.116", features = ["derive"] }
 anyhow = "1.0.32"
-twitchchat = { version = "=0.14.1", features = ["async", "smol", "async-tls"] }
+twitchchat = { version = "0.14.4", features = ["async", "smol", "async-tls"] }
 smol = "1.2.2"
 log = "0.4.11"
 env_logger = "0.7.1"
