--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,4 @@ env_logger = "0.7.1"
 either = "1.6.1"
 reqwest = { version = "0.10.8", default-features = false, features = ["json", "rustls-tls"] }
 tokio = { version = "0.2.22", features = ["macros"] }
+self_update = { version = "0.20.0", features = ["archive-tar", "compression-flate2", "rustls"] }
