--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cookiebot"
-version = "0.1.6"
+version = "0.1.7"
 authors = ["Chronophylos <nikolai@chronophylos.com>"]
 edition = "2018"
 repository = "Chronphylos/cookiebot"
@@ -10,16 +10,16 @@ repository = "Chronphylos/cookiebot"
 default = []
 
 [dependencies]
-lazy_static = "1.4.0"
-regex = "1.3.9"
-ron = "0.6.2"
-serde = { version = "1.0.116", features = ["derive"] }
-anyhow = "1.0.32"
-twitchchat = { version = "0.14.4", features = ["async", "smol", "async-tls"] }
-smol = "1.2.2"
-log = "0.4.11"
-env_logger = "0.7.1"
-either = "1.6.1"
-reqwest = { version = "0.10.8", default-features = false, features = ["json", "rustls-tls"] }
-tokio = { version = "0.2.22", features = ["macros"] }
-self_update = { version = "0.20.0", features = ["archive-tar", "compression-flate2", "rustls"] }
+lazy_static = "^1.4"
+regex = "^1.4"
+ron = "^0.6"
+serde = { version = "1", features = ["derive"] }
+anyhow = "1"
+twitchchat = { version = "0.14", features = ["async", "smol", "async-tls"] }
+smol = "^1.2"
+log = "^0.4"
+env_logger = "^0.8"
+either = "^1.6"
+reqwest = { version = "^0.10", default-features = false, features = ["json", "rustls-tls"] }
+tokio = { version = "^0.3", features = ["macros", "rt-multi-thread"] }
+self_update = { version = "^0.20", features = ["archive-tar", "compression-flate2", "rustls"] }
