--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,5 @@ smol = "^1.2"
 log = "^0.4"
 env_logger = "^0.8"
 either = "^1.6"
-reqwest = { version = "^0.10", default-features = false, features = ["json", "rustls-tls"] }
-tokio = { version = "^0.3", features = ["macros", "rt-multi-thread"] }
+reqwest = { version = "^0.10", default-features = false, features = ["json", "rustls-tls", "blocking"] }
 self_update = { version = "^0.20", features = ["archive-tar", "compression-flate2", "rustls"] }
