--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,7 +29,7 @@ test_script:
     )
 
 before_deploy:
-  - cargo rustc --target %TARGET% --release --bin cookiebot -- -C lto
+  - cargo rustc --target %TARGET% --release --bin cookiebot
   - ps: ci\before_deploy.ps1
 
 deploy:
