--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,4 @@ env_logger = "^0.8"
 either = "^1.6"
 reqwest = { version = "^0.10", default-features = false, features = ["json", "rustls-tls", "blocking"] }
 self_update = { version = "^0.20", features = ["archive-tar", "compression-flate2", "rustls"] }
+clap = "2.33.3"
