--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,16 +6,16 @@ edition = "2018"
 repository = "Chronphylos/cookiebot"
 
 [dependencies]
-lazy_static = "^1.4"
-regex = "^1.4"
-ron = "^0.6"
+lazy_static = "1.4"
+regex = "1.4"
+ron = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
 twitchchat = { version = "0.14", features = ["async", "smol", "async-tls"] }
-smol = "^1.2"
-log = "^0.4"
-env_logger = "^0.8"
-reqwest = { version = "^0.10", default-features = false, features = ["json", "rustls-tls", "blocking"] }
-self_update = { version = "^0.22", features = ["archive-tar", "compression-flate2", "rustls"] }
-clap = "2.33.3"
-thiserror = "1.0.23"
+smol = "1.2"
+log = "0.4"
+env_logger = "0.8"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
+self_update = { version = "0.24", features = ["archive-tar", "compression-flate2", "rustls"] }
+clap = "2.33"
+thiserror = "1.0"
