--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ reqwest = { version = "0.11", default-features = false, features = ["json", "rus
 self_update = { version = "0.24", features = ["archive-tar", "compression-flate2", "rustls"] }
 clap = "2.33"
 thiserror = "1.0"
+metrics = "0.14.2"
