--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ regex = "1.4"
 ron = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
-twitchchat = { version = "0.14", features = [
+twitchchat = { git = "https://github.com/museun/twitchchat", features = [
     "async",
     "tokio",
     "tokio-util",
@@ -19,7 +19,7 @@ twitchchat = { version = "0.14", features = [
     "webpki-roots",
 ] }
 log = "0.4"
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"] }
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 self_update = { version = "0.26", features = ["archive-tar", "compression-flate2", "rustls"] }
 clap = "2.33"
 thiserror = "1.0"
