--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,5 +26,5 @@ thiserror = "1.0"
 metrics = "0.14.2"
 metrics-exporter-prometheus = "0.3.0"
 tracing = "0.1.24"
-tracing-subscriber = { version = "0.2.16", default-features = false, features = ["env-filter", "ansi", "fmt"] }
+tracing-subscriber = "0.2.1"
 tokio = { version = "1.2.0", features = ["full"] }
