--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,13 +11,6 @@ regex = "1.4"
 ron = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
-twitchchat = { git = "https://github.com/museun/twitchchat", features = [
-    "async",
-    "tokio",
-    "tokio-util",
-    "tokio-rustls",
-    "webpki-roots",
-] }
 log = "0.4"
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
 self_update = { version = "0.26", features = ["archive-tar", "compression-flate2", "rustls"] }
@@ -28,3 +21,4 @@ metrics-exporter-prometheus = "0.3.0"
 tracing = "0.1.24"
 tracing-subscriber = "0.2.1"
 tokio = { version = "1.2.0", features = ["full"] }
+twitch-irc = "2.2.0"
