--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,31 +11,33 @@ env:
 
 jobs:
   build:
-    - uses: actions/checkout@v2
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-    - uses: Swatinem/rust-cache@v1
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+      - uses: Swatinem/rust-cache@v1
 
-    - name: Run tests
-      uses: actions-rs/cargo@v1.0.1
-      with:
-        command: test
-        args: --verbose
-    - name: Build
-      uses: actions-rs/cargo@v1.0.1
-      with:
-        command: build
-        toolchain: nightly
-        args: -Z unstable-options --release --out-dir artifacts --verbose
-    - name: Strip binary
-      run: strip -s artifacs/cookiebot
-    
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      with:
-          files: |
-            artifacts/cookiebot
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run tests
+        uses: actions-rs/cargo@v1.0.1
+        with:
+          command: test
+          args: --verbose
+      - name: Build
+        uses: actions-rs/cargo@v1.0.1
+        with:
+          command: build
+          toolchain: nightly
+          args: -Z unstable-options --release --out-dir artifacts --verbose
+      - name: Strip binary
+        run: strip -s artifacs/cookiebot
+      
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+            files: |
+              artifacts/cookiebot
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
