--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
       - uses: Swatinem/rust-cache@v1
 
       - name: Run tests
