--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,9 +33,10 @@ jobs:
           command: build
           toolchain: nightly
           args: -Z unstable-options --release --out-dir artifacts --verbose
+
       - name: Strip binary
+        if: startsWith(github.ref, 'refs/tags/')
         run: strip -s artifacts/cookiebot
-      
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
