--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -1,10 +1,6 @@
 name: Clippy check
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push, pull_request]
 
 jobs:
   clippy_check:
