--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ tracing = "0.1.24"
 tracing-subscriber = "0.2.1"
 tokio = { version = "1.2.0", features = ["full"] }
 twitch-irc = "2.2.0"
+async-trait = "0.1.48"
