--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,5 @@ tracing-subscriber = "0.2.1"
 tokio = { version = "1.2.0", features = ["full"] }
 twitch-irc = "2.2.0"
 async-trait = "0.1.48"
+secrecy = { version = "0.7.0", features = ["serde"] }
+zeroize = { version = "1.2.0", features = ["zeroize_derive"] }
