--- a/cookiebot.ron.example
+++ b/cookiebot.ron.example
@@ -1,1 +1,1 @@
-(username:"chronophylos",token:"oauth:2kjhlsdhf27hlkajhsd2",channel:"thepositivebot")
+(username:"chronophylos",token:("oauth:2kjhlsdhf27hlkajhsd2"),cookiebot_channel:"thepositivebot",egbot_channel:"okayegbot")
