--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,21 +9,29 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1
+      - name: Checkout Project
+        uses: actions/checkout@v2
+        
+      - name: Install stable Rust
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-      - uses: actions-rs/toolchain@v1
+
+      - name: Install nightly Rust
+        uses: actions-rs/toolchain@v1
         with:
           toolchain: nightly
-      - uses: Swatinem/rust-cache@v1
+
+      - name: Cache rust
+        uses: Swatinem/rust-cache@v1
 
       - name: Run tests
         uses: actions-rs/cargo@v1.0.1
         with:
           command: test
           args: --verbose
-      - name: Build
+
+      - name: Build binary
         uses: actions-rs/cargo@v1.0.1
         with:
           command: build
@@ -33,6 +41,7 @@ jobs:
       - name: Strip binary
         if: startsWith(github.ref, 'refs/tags/')
         run: strip -s artifacts/cookiebot
+
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
