--- a/cookiebot.ron.example
+++ b/cookiebot.ron.example
@@ -2,7 +2,11 @@
     username: "chronophylos",
     token: ("2kjhlsdhf27hlkajhsd2"),
     cookiebot_channel: "thepositivebot",
-    egbot_channel: "okayegbot",
     cookiebot_disabled: false,
-    egbot_disabled: false
+    egbot_channel: "okayegbot",
+    egbot_disabled: true,
+    leavesbot: (
+        disabled: false,
+        channel: "teischente"
+    )
 )
