--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,10 @@ regex = "1.4"
 ron = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 anyhow = "1.0"
-reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11", default-features = false, features = [
+    "json",
+    "rustls-tls",
+] }
 clap = "2.33"
 thiserror = "1.0"
 metrics = "0.14.2"
